--- a/typo3conf/ext/bitconex/Resources/Private/Layouts/Default.html
+++ b/typo3conf/ext/bitconex/Resources/Private/Layouts/Default.html
@@ -1,5 +1,7 @@
 <f:render partial="Header/Header" arguments="{headerNavigation:headerNavigation}" />
-<f:render section="main" />
-<f:render section="mainn" />
+<div class="container">
+    <f:render section="main" />
+    <f:render section="mainn" />
+</div>
 
 <f:render partial="Footer/Footer" arguments="{footerNavigation:footerNavigation}" />
