--- a/typo3conf/ext/bitconex/Resources/Private/Templates/Default.html
+++ b/typo3conf/ext/bitconex/Resources/Private/Templates/Default.html
@@ -8,7 +8,7 @@
 
 <f:section name="mainn">
    <button class="btn btn-primary">
-       mesud mujanovic
+      prva ext sa osmanom zajedno
    </button>
-    <h4 class="name">Osman Vilic</h4>
+    <h4 class="name">prva ext sa osmanom</h4>
 </f:section>
