--- a/typo3conf/ext/bitconex_team/Resources/Private/Templates/Member/Edit.html
+++ b/typo3conf/ext/bitconex_team/Resources/Private/Templates/Member/Edit.html
@@ -1,6 +1,17 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:layout name="Default" />
 
+This template displays a EDIT form for the current domain object.
+
+If you modify this template, do not forget to change the overwrite settings
+in /Configuration/ExtensionBuilder/settings.yaml:
+  Resources:
+    Private:
+      Templates:
+        Member:
+          Edit.html: keep
+
+Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
     <h1>Edit Member</h1>
