--- a/typo3conf/ext/bitconex_team/Resources/Private/Templates/Member/List.html
+++ b/typo3conf/ext/bitconex_team/Resources/Private/Templates/Member/List.html
@@ -1,9 +1,20 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:layout name="Default" />
 
+This template is responsible for creating a table of domain objects.
+
+If you modify this template, do not forget to change the overwrite settings
+in /Configuration/ExtensionBuilder/settings.yaml:
+  Resources:
+    Private:
+      Templates:
+        Member:
+          List.html: keep
+
+Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <h1>Listing for Member new builder ext</h1>
+    <h1>Listing for Member</h1>
 
     <f:flashMessages />
 
@@ -14,8 +25,6 @@
             <th></th>
             <th></th>
         </tr>
-        <tb><f:link.action action="list">Back to list</f:link.action></tb>
-
         <f:for each="{members}" as="member">
             <tr>
                 <td><f:link.action action="show" arguments="{member : member}">{member.name}</f:link.action></td>
